"""Sipi — IIIF-compatible media server.

Bazel 9.0.2 LTS module. Bazel is the build system; Nix provisions the
dev shell only.

Versioning: `version.txt` is the single source of truth for the Sipi version
string. `tools/workspace_status.sh` reads it into `STABLE_SIPI_VERSION`, which
`expand_template` substitutes into `include/SipiVersion.h.in`. The `version`
attribute below is intentionally left at the placeholder "0.0.0" — Sipi is not
published to the Bazel Central Registry, so this string is never consumed by a
downstream module.
"""

module(
    name = "sipi",
    version = "0.0.0",
    compatibility_level = 1,
)

# ── Foundational rules ────────────────────────────────────────────────────
# `platforms` declares the OS/CPU pairs `//platforms:*` resolves against;
# `rules_cc` is required at the top of every BUILD.bazel using cc_* in
# Bazel 9 (built-in cc_* rules removed from the global namespace).
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_cc", version = "0.2.19")

# `cmake_configure_file` reproduces CMake `configure_file()` config-header
# generation natively (`#cmakedefine` / `@VAR@` substitution), so the native
# `cc_library` deps (jansson, libtiff, exiv2) generate their config headers
# without running CMake. Same module the BCR libtiff overlay uses; loaded as
# `@cmake_configure_file//:cmake_configure_file.bzl`.
bazel_dep(name = "cmake_configure_file", version = "0.1.7")

# `aspect_bazel_lib` provides `expand_template` with `stamp_substitutions=`,
# which Y consumes to bake `STABLE_SIPI_VERSION` etc. into SipiVersion.h.
# Y+4 will reuse it for OCI image stamping (`image_created`, `image_labels`).
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")

# Every C/C++ dep is a BCR `bazel_dep` or a native `cc_library`
# (`bazel/<lib>.BUILD.bazel`) compiled by the hermetic LLVM toolchain — no
# third-party CMake/Make build step runs during the build.
# See docs/adr/0015-native-cc_library-over-foreign_cc.md.

# `prometheus-cpp` consumed via the BCR module. SIPI only
# links the core counters/gauges/histograms (no HTTP exposer — metrics are
# served by SIPI's own shttps handler), so `@prometheus-cpp//core` is the
# only target consumed; the BCR module's optional `pull`/`push`/`civetweb`
# subgraphs stay outside the action graph. Version `1.3.0.bcr.2` is the
# BCR re-pack of upstream `v1.3.0` — same source, no upstream bump.
# Canonical-shape `bazel_dep` per BCR `docs/bcr-policies.md`: module name
# is the apparent name; no `repo_name=` override.
bazel_dep(name = "prometheus-cpp", version = "1.3.0.bcr.2")

# Surgical fix for the BCR repack: upstream `core/BUILD.bazel` uses bare
# `cc_library(...)` without a `load()`, which Bazel 9 rejects (the legacy
# global cc rules were removed). The BCR module only patches MODULE.bazel,
# not the BUILD files. Patching here — instead of enabling
# `--incompatible_autoload_externally=+cc_library` project-wide — keeps
# the explicit-load discipline intact for our own first-party BUILDs.
# `patch_strip = 1` matches the conventional `a/`/`b/` prefixes in the
# diff. Drop this `single_version_override` when prometheus-cpp publishes
# a Bazel-9-clean BCR rev (the patch will fail loudly when the upstream
# file shape changes — desired feedback).
single_version_override(
    module_name = "prometheus-cpp",
    patch_strip = 1,
    patches = ["//bazel/patches:prometheus_cpp_load_cc.patch"],
)

# `protobuf` consumed via BCR (DEV-6410 / ADR-0005). The Essentials packet
# (`src/metadata/essentials.proto`) uses `optimize_for = LITE_RUNTIME`, so only
# the protobuf-lite static archive enters the link (≈300-500 KB).
# `proto_library` and `cc_proto_library` are exported by the protobuf module
# itself (`@protobuf//bazel:{proto_library,cc_proto_library}.bzl`) in
# protobuf 26+. Canonical-shape `bazel_dep` per BCR `docs/bcr-policies.md`:
# the BCR canonical name (`protobuf`) is the apparent name; no `repo_name=`
# override. The legacy WORKSPACE-era alias `com_google_protobuf` is not
# propagated — any future cross-repo consumer should also adopt `@protobuf`.
bazel_dep(name = "protobuf", version = "34.1")

# Third-party C/C++ libraries consumed via BCR `bazel_dep`.
# Canonical-shape `bazel_dep` per BCR `docs/bcr-policies.md`: no
# `repo_name=` override. Consumer label is the cc_library target the
# module actually exports — verify with `bazel query '@<dep>//...'`
# (the `@<dep>` shortform only works when the module exports a target
# of the same name; bzip2 for example exports its CLI under that name
# and the cc_library under `@bzip2//:bz2`).
bazel_dep(name = "bzip2", version = "1.0.8.bcr.4")
bazel_dep(name = "zstd", version = "1.5.7.bcr.1")
bazel_dep(name = "xz", version = "5.4.5.bcr.8")
bazel_dep(name = "zlib", version = "1.3.2")
bazel_dep(name = "sqlite3", version = "3.51.2.bcr.1")
bazel_dep(name = "libexpat", version = "2.7.1.bcr.1")
bazel_dep(name = "libmagic", version = "5.47")

# Codec libs consumed as BCR drop-ins. libjpeg_turbo is consumed at the classic
# ≤v8 API target `@libjpeg_turbo//:jpeg` (SipiIOJpeg.cpp uses only that surface;
# `:turbojpeg` is a separate API we don't consume). libwebp is reached only via
# WebP-in-TIFF — SIPI emits no WebP directly. libdeflate is the modern Deflate
# path the native libtiff enables (LIBDEFLATE_SUPPORT).
bazel_dep(name = "libpng", version = "1.6.54")
bazel_dep(name = "libjpeg_turbo", version = "3.1.3.bcr.5")
bazel_dep(name = "libwebp", version = "1.6.0")
bazel_dep(name = "libdeflate", version = "1.25")

# Hard pin to the 5.3 line — SipiLua.cpp and src/shttps/lua/LuaServer.cpp use the
# Lua C API extensively, and 5.3 → 5.4 is not ABI-compatible (lua_resume
# signature change, integer-subtype defaults, bitlib removal).
bazel_dep(name = "lua", version = "5.3.6")

# 8.12.0.bcr.1 (one patch behind upstream 8.12.1 we previously pinned).
# Accept the tiny downgrade: SIPI consumes curl for outbound HTTP/HTTPS
# (Knora API auth callbacks); no curl features land between 8.12.0 and
# 8.12.1 that we exercise. The bcr.1 patch level lets the BCR module
# carry security backports independent of upstream point releases.
bazel_dep(name = "curl", version = "8.12.0.bcr.1")

# OpenSSL 3.x is consumed via @openssl//:ssl + @openssl//:crypto by
# src/shttps/jwt/jwt.c (EVP_PKEY_get_int_param / OSSL_PKEY_PARAM_BITS),
# the rest of shttps, sentry's crash uploader, and curl's TLS backend
# (pinned to openssl via `--@curl//:ssl_lib=openssl` in .bazelrc).
bazel_dep(name = "openssl", version = "3.5.5.bcr.4")

# CLI11 — header-only CLI parser for `src/cli/cli_app.cpp` (the only consumer).
# Replaces the in-tree single-header copy of 1.8.0 (`include/CLI11.hpp`); BCR is
# a true drop-in here per ADR-0015 (a CLI parser, no codec/capability concern).
# Consumed as @cli11//:cli11 with `#include <CLI/CLI.hpp>`.
bazel_dep(name = "cli11", version = "2.6.2")

# protobuf 34.1 transitively pulls `rules_go@0.51.0-rc2` for its Go support.
# That release's `go/private/rules/cgo.bzl` still references `CcInfo` from
# `@rules_cc//cc:defs.bzl`, where the symbol was removed in rules_cc 0.2.x
# (now `@rules_cc//cc/common:cc_info.bzl`). Bazel resolves the registered
# `@go_toolchains//:all` toolchain at analysis time even for non-Go targets,
# so the broken load fires on first `bazelisk build //src/metadata:essentials_cc_proto`.
# Override to the latest stable rules_go, which loads CcInfo from the new path.
# Drop this override once a protobuf release pins a Bazel-9-clean rules_go.
bazel_dep(name = "rules_go", version = "0.60.0")

# Same story for `rules_android` — protobuf 34.1 transitively pulls
# `rules_android@0.6.4`, whose `android_local_test/attrs.bzl` still loads
# `CcInfo` from `@rules_cc//cc:defs.bzl`. Bazel resolves the registered
# `@androidsdk//:all` toolchain at analysis time for every target's
# toolchain query (even pure C++ ones), so the broken load tanks every
# `bazel build` / `bazel test` on CI runners that lack an Android SDK
# install. rules_android 0.7.x loads CcInfo from the new path and no
# longer eagerly fails when ANDROID_HOME is unset. Drop this override
# once protobuf bumps to a rules_android that's clean on Bazel 9.
single_version_override(
    module_name = "rules_android",
    version = "0.7.2",
)

# `llvm` (hermeticbuild/hermetic-llvm) registers a fully-hermetic LLVM
# toolchain. Unlike toolchains_llvm it bundles per-target glibc stubs +
# libc++ + compiler-rt (no external Chromium debian-sysroot tarballs) and
# fetches the macOS SDK from Apple's CDN (no host Xcode CLT), so the build
# decouples from host Nix/Xcode tooling. The toolchain-extension wiring
# (LLVM version, exec/target platforms) lives below.
# See docs/adr/0014-toolchain-provider-swap.md.
bazel_dep(name = "llvm", version = "0.8.10")

# hermetic-llvm hands the Linux kernel + glibc system headers to compile actions
# as a bare source-directory artifact via two paths: the toolchain cc_args
# (target-config compiles) and the kernel_headers / gnu_libc_headers cc_library
# `hdrs = ["include"]` consumed by @llvm-project's libcxx/libcxxabi/libunwind
# (the exec-config "stage0" runtime compiles, which get no kernel-header cc_args).
# Remote execution must expand a source directory into each action's Merkle input
# tree; the include/ subtree is dropped, giving `'linux/limits.h' file not found`
# on the toolchain-bootstrap [for tool] compiles -- deterministic once the action
# cache is cold, masked by warm cache hits. A Bazel-side input-declaration issue,
# not a backend bug. The patch (1) globs the headers_directory targets into
# discrete File artifacts (cc_args path) and (2) makes the module-map generator
# emit one umbrella per directory, plus (3) globs the cc_library hdrs into
# individual files (implementation_deps path). Drop if/when fixed upstream.
single_version_override(
    module_name = "llvm",
    patch_strip = 1,
    patches = ["//bazel/patches:hermetic_llvm_headers_glob.patch"],
)

# ── Container image rules ─────────────────────────────────────────────────
# `rules_oci` builds the OCI image. The image is assembled per-arch by
# `oci_image`, pushed by `oci_push`; the multi-arch manifest is built by
# `crane index append` on a coordinator job (NOT `oci_image_index`, which
# only consumes same-build-graph labels — per-arch CI runners produce
# digests that cross job boundaries).
#
# `rules_oci` 2.x maintainer CI does not yet list Bazel 9 as tested;
# community reports indicate it works. If a Bazel-9 incompat surfaces, the
# fallback is a `genrule` that subprocesses `crane append` directly (same
# multi-arch architecture, fewer rules-set deps).
bazel_dep(name = "rules_oci", version = "2.3.0")

# `rules_distroless` provides `passwd()` and `group()` macros for
# fakeNss-equivalent /etc/passwd + /etc/group + nsswitch.conf layers
# (replaces today's `dockerTools.fakeNss`). See `//src:nss_layer`.
bazel_dep(name = "rules_distroless", version = "0.8.0")

# `tar.bzl` provides the `tar()` rule used to assemble runtime layers
# (sipi binary wrapper layout, sipi config/scripts/server tree, nsswitch
# layer). Deterministic by construction (sorted entries, mtime=0,
# uid/gid=0) — required for OCI tarball SHA reproducibility.
bazel_dep(name = "tar.bzl", version = "0.10.4")

# `oci_pull` for the distroless_base image used as `:image`'s base layer.
# Pinned by `digest =`, never `tag =` (reproducibility-critical: tags
# float; digests don't). Multi-arch index — `rules_oci`'s platform-aware
# resolution selects amd64 or arm64 manifest at build time. The digest
# below was captured 2026-05-08 from
#   curl -sSL https://gcr.io/v2/distroless/base-debian12/manifests/latest \
#     -H 'Accept: application/vnd.oci.image.index.v1+json'
# Bumping it later means re-running the curl and copying the
# `Docker-Content-Digest` response header.
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    digest = "sha256:9dce90e688a57e59ce473ff7bc4c80bc8fe52d2303b4d99b44f297310bbd2210",
    image = "gcr.io/distroless/base-debian12",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
use_repo(oci, "distroless_base", "distroless_base_linux_amd64", "distroless_base_linux_arm64_v8")

# `apt.install` resolves Debian bookworm package dependencies from the
# manifest in `bazel/distroless/bookworm.yaml` against the lock file in
# `bookworm.lock.json`. The lock file is regenerated by:
#
#     bazel run @bookworm//:lock
#
# Provides the runtime extras the production image needs alongside
# `distroless_base-debian12`'s glibc + ca-certificates + tzdata + openssl:
#
#   - tini:  `/usr/bin/tini`     PID 1 zombie reaping + signal forwarding
#                                (entrypoint `["tini", "--", "/sbin/sipi"]`).
#   - curl:  `/usr/bin/curl`     Used by ops-deploy's compose-level
#                                healthcheck — `CMD curl -sf
#                                http://localhost:1024/health`.
#
# Snapshot pin: snapshot.debian.org timestamp freezes Debian's apt index
# so the lock file is reproducible across runs. Bumping the snapshot
# means re-running `bazel run @bookworm//:lock` and committing the
# updated `bookworm.lock.json`.
apt = use_extension("@rules_distroless//apt:extensions.bzl", "apt")
apt.install(
    name = "bookworm",
    lock = "//bazel/distroless:bookworm.lock.json",
    manifest = "//bazel/distroless:bookworm.yaml",
)
use_repo(apt, "bookworm")

# `http_archive` is also used (later in this file) to fetch the native-lib
# source archives, but those entries are below the LLVM
# toolchain block. We need it available here for the FFmpeg static
# pull, so bind it once now — `use_repo_rule` may be called multiple
# times for the same upstream rule.
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# BtbN LGPL static FFmpeg — third-party prebuilt static-linked
# `ffmpeg`/`ffprobe`/`ffplay` binaries from the public CI pipeline at
# https://github.com/BtbN/FFmpeg-Builds/. We ingest only `ffmpeg` +
# `ffprobe` (no `ffplay`); see the `:ffmpeg_layer_*` `tar()` rules in
# `src/BUILD.bazel`.
#
# Why third-party rather than Debian's `ffmpeg`: Debian's `ffmpeg`
# package transitively pulls libsdl2 / libxv1 / libxext6 (~500 MiB) for
# ffplay's GPU video sink. The DSP stack only invokes `ffprobe` (via
# dsp-ingest's `docker run --entrypoint ffprobe daschswiss/sipi …` for
# video metadata) and never the GUI sinks; the static LGPL build is
# self-contained (no shared-lib closure to worry about) and ships at
# ~70 MiB for both binaries combined. License-clean: AGPL-licensed sipi
# invokes ffprobe as a subprocess (process boundary), so the LGPL+sipi
# combination has no viral linking concern.
#
# Pinning: BtbN's retention policy keeps the LAST autobuild of each month
# for two years; mid-month autobuild releases are pruned after a few weeks
# (a pruned URL 404s and breaks the fetch — exactly how the prior
# `autobuild-2026-05-08` mid-month pin died). So always pin a MONTH-END
# autobuild: `autobuild-2026-05-31-…` is retained until ~2028-05. The
# `n8.1.1-9-g…-lgpl-8.1` asset is the FFmpeg 8.1 stable branch as of that
# build (a few commits past the n8.1.1 tag), not the rolling-master
# nightly. Bumping means picking the last autobuild of a recent completed
# month, confirming it still carries `…-linux{64,arm64}-lgpl-8.X.tar.xz`
# assets, and refreshing both URLs + both sha256 sums.
http_archive(
    name = "ffmpeg_static_linux_amd64",
    build_file_content = """\
filegroup(
    name = "binaries",
    srcs = [
        "bin/ffmpeg",
        "bin/ffprobe",
    ],
    visibility = ["//visibility:public"],
)

exports_files([
    "bin/ffmpeg",
    "bin/ffprobe",
])
""",
    sha256 = "9da613468e319c6444ff93d23f4a3fd16b67e44d4c9da62dc46f1822f2851ccb",
    strip_prefix = "ffmpeg-n8.1.1-9-g58d4114d36-linux64-lgpl-8.1",
    url = "https://github.com/BtbN/FFmpeg-Builds/releases/download/autobuild-2026-05-31-13-22/ffmpeg-n8.1.1-9-g58d4114d36-linux64-lgpl-8.1.tar.xz",
)

http_archive(
    name = "ffmpeg_static_linux_arm64",
    build_file_content = """\
filegroup(
    name = "binaries",
    srcs = [
        "bin/ffmpeg",
        "bin/ffprobe",
    ],
    visibility = ["//visibility:public"],
)

exports_files([
    "bin/ffmpeg",
    "bin/ffprobe",
])
""",
    sha256 = "cbc347fb037a45c2d8417d226567c961274c7f43bbd7765ad5a00d4f18aea63c",
    strip_prefix = "ffmpeg-n8.1.1-9-g58d4114d36-linuxarm64-lgpl-8.1",
    url = "https://github.com/BtbN/FFmpeg-Builds/releases/download/autobuild-2026-05-31-13-22/ffmpeg-n8.1.1-9-g58d4114d36-linuxarm64-lgpl-8.1.tar.xz",
)

# ── Test-only deps ────────────────────────────────────────────────────────
# Pinned to 1.17.0.bcr.2 because transitive deps (`aspect_bazel_lib` and the
# rules under it) already pull in `googletest@1.17.0`; declaring an older
# version here triggers a `--check_direct_dependencies` warning under
# Bazel 9's MVS resolver. 1.17.0 is API-compatible with the 1.16.x line
# (gtest's API has been stable across 1.1x).
# The `dev_dependency = True` flag keeps it out of the runtime build graph
# so production targets in `//src` and `//shttps` cannot accidentally take
# a transitive dep on test infrastructure.
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)

# Google Benchmark — the C++ microbenchmark harness behind `just bench`.
# `dev_dependency = True` for the same reason as googletest: the benchmark
# `cc_binary` targets are `tags=["manual"]` dev-loop tools, never linked into
# `//src/cli:sipi` or any production target, so they must stay out of the
# runtime build graph. Targets: `@google_benchmark//:benchmark` and
# `:benchmark_main` (the latter provides `main()` + arg parsing). The
# transitive `libpfm` (Linux perf counters) is benign and unused on macOS.
bazel_dep(name = "google_benchmark", version = "1.9.5", dev_dependency = True)

# Python for `//tools/benchmark:compare` (the vendored google_benchmark
# compare.py — see tools/benchmark/BUILD.bazel for why it is vendored).
# `rules_python` is already resolved transitively at exactly 1.7.0
# (googletest→re2→pybind11, protobuf), so this direct
# dev_dependency causes zero MVS churn. The hermetic 3.12 toolchain and the
# `sipi_bench_pip` hub (numpy/scipy, mirroring google_benchmark 1.9.5's own
# tools/requirements.txt) keep the compare workflow off the host/Nix python.
bazel_dep(name = "rules_python", version = "1.7.0", dev_dependency = True)

python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = True)
python.toolchain(python_version = "3.12")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip", dev_dependency = True)
pip.parse(
    # Use prebuilt binary wheels only (discard sdists). numpy/scipy ship
    # cp312 wheels for every platform we target, so nothing compiles from
    # source — which also means rules_python skips its macOS `xcrun
    # xcodebuild` SDK probe (it only runs when building an sdist). That
    # probe fails in the Nix dev shell, whose DEVELOPER_DIR points at the
    # nix apple-sdk (SDK headers + xcrun, but no `xcodebuild` tool). Keeps
    # `just bench-compare` hermetic and host-Xcode-free.
    download_only = True,
    hub_name = "sipi_bench_pip",
    python_version = "3.12",
    requirements_lock = "//tools/benchmark:requirements.txt",
)
use_repo(pip, "sipi_bench_pip")

# Benchmark fixture archive — the decode/encode-tier variant matrix generated
# by `tools/benchmark/generate_fixtures.sh` and hosted as a release asset on
# dasch-swiss/dsp-ci-assets (next to the Kakadu archives, fetched the same
# way via `gh_release_archive`). Pins (tag/asset/sha256) live in the
# extension. Dev-only AND consumed solely by the manual-tagged
# `//src:{decode,encode}_benchmark` targets, so the 321 MB fetch happens
# lazily on first `just bench decode|encode` — never in production or CI
# test builds.
benchmark_fixtures = use_extension("//bazel:benchmark_fixtures_extension.bzl", "benchmark_fixtures_extension", dev_dependency = True)
use_repo(benchmark_fixtures, "sipi_bench_fixtures")

# ── LLVM toolchain — hermetic, LLVM 22.1.7, libc++ ─────────────────────────
#
# hermeticbuild/hermetic-llvm is zero-sysroot: it links each Linux target
# against per-version glibc stubs it generates itself (default floor: the
# earliest glibc that supports the target, ~2.28 — strictly more portable
# than the prior toolchains_llvm Chromium debian-bullseye 2.31) and ships its
# own libc++/compiler-rt, so there are no Chromium sysroot tarballs to pin and
# no host-glibc leakage into Bazel-driven compiles. The macOS SDK
# (MacOSX26.4.sdk) is fetched hermetically from Apple's CDN, so darwin needs
# no host Xcode CLT and no `.bazelrc` SDK hacks.
#
# LLVM 22.1.7 is the module's prebuilt default. 19.1.7 (the prior
# toolchains_llvm pin) has NO prebuilt in hermetic-llvm 0.8.x and would force
# a multi-hour from-source clang bootstrap, so the provider swap necessarily
# carries a 19→22 compiler bump. libc++ is the toolchain default on every
# target, so the old `stdlib = {linux-*: libc++}` map is gone. C++23 comes
# from the global `--cxxopt=-std=c++23` in .bazelrc (the module exposes no
# `cxx_standard` attr). See docs/adr/0014-toolchain-provider-swap.md for the
# rationale and the v0.8.x / compatibility-level-0 pinning policy.
llvm_source = use_extension("@llvm//extensions:llvm_source.bzl", "llvm_source")
llvm_source.version(llvm_version = "22.1.7")
use_repo(llvm_source, "llvm-raw", "llvm_config", "llvm_zlib", "llvm_zstd")

# `exec` = the hosts we build ON; `target` = the platforms we build FOR. CI
# runs the test matrix natively on all three (macOS-arm64, linux-x86_64, and
# linux-aarch64 on an `ubuntu-24.04-arm` runner), so each is declared as an
# exec host. Omitting `exec(linux-aarch64)` makes Bazel fall back to the
# autodetected Nix host CC toolchain on the native arm64 runner, which compiles
# `-stdlib=libc++` but never links the libc++ runtime — a flood of
# `undefined reference to std::__1::…`. (darwin→linux cross-compile, Phase 3,
# is a separate path and does not need a linux-aarch64 exec host.)
#
# A single registered toolchain serves every platform, INCLUDING the
# `//tools/fuzz:*_fuzz` platforms: the extra `fuzz_enabled` constraint they
# carry comes from a constraint_setting this toolchain never references, so it
# is ignored during resolution (Bazel matches by subset inclusion). This folds
# away the prior second `llvm_toolchain_fuzz` toolchain, which was functionally
# identical on Linux (both libc++) and existed only for the first-registered-
# wins routing that a single toolchain makes unnecessary.
toolchain = use_extension("@llvm//extensions:toolchain.bzl", "toolchain")
toolchain.exec(
    arch = "aarch64",
    os = "macos",
)
toolchain.exec(
    arch = "x86_64",
    os = "linux",
)
toolchain.exec(
    arch = "aarch64",
    os = "linux",
)
toolchain.target(
    arch = "aarch64",
    os = "macos",
)
toolchain.target(
    arch = "x86_64",
    os = "linux",
)
toolchain.target(
    arch = "aarch64",
    os = "linux",
)
use_repo(toolchain, "llvm_toolchains")

register_toolchains("@llvm_toolchains//:all")

# Expose the prebuilt LLVM release bundle so individual binutils-class tools
# (llvm-objcopy, llvm-cov, …) are referenceable as `@<bundle>//:bin/<tool>`.
# Needed for the Linux debug-split genrule (objcopy/readelf) and `bazel
# coverage` (llvm-cov/llvm-profdata version-matched to the instrumented
# `.profraw`). The repo name embeds the LLVM
# version + exec triple — bumping LLVM_VERSION means updating it here and in
# //bazel (see ADR-0014's pinning policy).
llvm_toolchain_minimal = use_extension("@llvm//extensions:llvm_toolchain_minimal.bzl", "llvm_toolchain_minimal")

# `bazel mod tidy` drops these lines — it can't see the bundles referenced from
# the string labels in `//bazel`'s `alias(actual = "@llvm-toolchain-minimal-…")`
# targets, so it judges the repos unused. They are required for the
# //bazel:{llvm-objcopy,llvm-readelf,llvm-cov,llvm-profdata} (Linux debug-split
# + coverage) aliases. Re-add after running `bazel mod tidy`.
use_repo(
    llvm_toolchain_minimal,
    "llvm-toolchain-minimal-22.1.7-darwin-arm64",
    "llvm-toolchain-minimal-22.1.7-linux-amd64",
    "llvm-toolchain-minimal-22.1.7-linux-arm64",
)

# ── Rust toolchain + Crate Universe ─────────────────────────────────────────
#
# `rules_rust` produces one `rust_test` target per `tests/<name>.rs` file
# under `//test/e2e:`, mirroring Cargo's "one binary per `[[test]]`"
# semantics.
#
# **Registration ordering is load-bearing.** `cargo_build_script` rules
# (run during Crate Universe materialisation for every `*-sys` crate)
# resolve `cc` from the registered cc_toolchain at materialisation time.
# The LLVM toolchain blocks above MUST appear before the Rust extension —
# otherwise build scripts silently pick up the host `cc` and produce
# non-hermetic artifacts.
bazel_dep(name = "rules_rust", version = "0.70.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    # 1.88+ required: transitive `time-macros` crate uses
    # `proc_macro_span` (stabilised in 1.88). Edition 2024 (1.85+) is
    # also required by the transitive `pxfm` crate. `test/e2e/
    # Cargo.toml` itself stays on edition 2021 — the transitive bumps
    # are invisible to first-party code.
    versions = ["1.89.0"],
    # Cross-compile targets. The arm64/darwin CI legs run on native runners but
    # compile on the x86_64 RBE worker, so rules_rust must register a toolchain
    # with exec=x86_64-linux for each of these targets. Without them, no toolchain
    # satisfies the Rust toolchain type on the x86_64 exec platform for an
    # aarch64 target, so the exec-config tools (process_wrapper, build scripts,
    # proc-macros) fall through to the local host platform (wrong arch) and crash
    # on the worker. See RBE-HANDOFF.md. Local/native builds ignore these unless
    # `--platforms` targets them.
    extra_target_triples = [
        "aarch64-unknown-linux-gnu",
        "aarch64-apple-darwin",
    ],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# `crate.from_cargo` is lazy resolution from `Cargo.lock` — the canonical
# default since rules_rust 0.59. `crates_vendor` (vendored sources in-tree)
# is reserved for offline CI scenarios that don't apply here.
#
# Repin via:  CARGO_BAZEL_REPIN=1 bazelisk fetch @crates//:all
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//test/e2e:Cargo.lock",
    manifests = ["//test/e2e:Cargo.toml"],
)

# Production Crate Universe manifest for the `sipi` server library (strangler-fig
# Phase C; //src/server-rs). Kept separate from the e2e `crates` above so the
# production dependency graph (axum/tokio/tower/tracing) is independent of the
# test-only graph (reqwest/insta/proptest/jsonwebtoken). Repin via:
#   CARGO_BAZEL_REPIN=1 bazelisk fetch @crates_prod//:all
crate.from_cargo(
    name = "crates_prod",
    cargo_lockfile = "//src/server-rs:Cargo.lock",
    manifests = ["//src/server-rs:Cargo.toml"],
)

# Crate Universe manifest for the default `sipi` binary (//src/cli-rs). A
# separate repo from `crates_prod` (rather than a second manifest on it) because
# crate_universe's `all_crate_deps()` resolves a target's deps by its in-repo
# package path, which a multi-manifest splice mangles into a synthetic-workspace
# path. This mirrors the existing `crates` (e2e) vs `crates_prod` (server) split.
# The //src/cli-rs → //src/server-rs:lib edge is a Bazel `deps` edge only — no
# Cargo path dep — so neither graph resolves it. Repin via:
#   CARGO_BAZEL_REPIN=1 bazelisk fetch @crates_cli//:all
crate.from_cargo(
    name = "crates_cli",
    cargo_lockfile = "//src/cli-rs:Cargo.lock",
    manifests = ["//src/cli-rs:Cargo.toml"],
)

# `aws-lc-sys` is intentionally NOT in the dep graph — its cmake-based
# build script panics inside Bazel actions ("rust_wrapper.h is not a
# directory"). `test/e2e/Cargo.toml` uses `jsonwebtoken`'s
# `rust_crypto` (pure-Rust) backend instead. The only `tests/`
# consumer is `security.rs`, which uses HS256 — a symmetric algorithm
# not affected by the backend choice. If a future test needs RSA/ECDSA
# JWT verification, `rust_crypto` covers both via `rsa` + `p256`/`p384`.
use_repo(crate, "crates")
use_repo(crate, "crates_prod")
use_repo(crate, "crates_cli")

# ── Kakadu (proprietary, GitHub-release-gated) ─────────────────────────────
# Custom repository_rule mirroring today's Nix FOD auth UX 1:1 — shells out
# to `gh release download` instead of `http_archive` + `auth_patterns` (the
# latter requires `~/.netrc`, which `gh` does not populate).
kakadu_extension = use_extension("//bazel:kakadu_extension.bzl", "kakadu_extension")
use_repo(kakadu_extension, "kakadu")

# ── ApprovalTests.cpp (single-header release, no BCR module) ───────────────
# `bazel/approvaltests_cpp.bzl` downloads the .hpp file released by the
# upstream project and exposes it as `cc_library(name = "approval_tests")`.
approvaltests_cpp = use_repo_rule("//bazel:approvaltests_cpp.bzl", "approvaltests_cpp")

approvaltests_cpp(
    name = "approvaltests_cpp",
    sha256 = "c00f6390b81d9924dc646e9d32b61e1e09abda106c13704f714ac349241bb9ff",
    url = "https://github.com/approvals/ApprovalTests.cpp/releases/download/v.10.13.0/ApprovalTests.v.10.13.0.hpp",
)

# ── Third-party C/C++ libs (native cc_library) ─────────────────────────────
# URLs and SHA256s are the single source of truth.
#
# Each archive's `build_file = "//bazel:<lib>.BUILD.bazel"` is a hand-written
# native `cc_library` we own, compiled by the hermetic LLVM toolchain like
# first-party code; consumers reference `@<lib>//:<target>`.
# See docs/adr/0015-native-cc_library-over-foreign_cc.md.
#
# `http_archive` itself is bound near the top of this file (alongside
# the FFmpeg static pull). One binding services every consumer.

http_archive(
    name = "exiv2",
    build_file = "//bazel:exiv2.BUILD.bazel",
    sha256 = "e1671f744e379a87ba0c984617406fdf8c0ad0c594e5122f525b2fb7c28d394d",
    strip_prefix = "exiv2-0.28.5",
    url = "https://github.com/Exiv2/exiv2/archive/refs/tags/v0.28.5.tar.gz",
)

# fmt deliberately omitted from the Bazel graph: the existing CMake build
# wires fmt 6.2.1 in via `ext/fmt/CMakeLists.txt`, but no SIPI translation
# unit (`src/`, `shttps/`, `include/`) actually `#include`s it — `grep`
# confirms zero references. fmt 6.2.1 also fails to compile with C++23 +
# Apple libc++ from the Xcode CLT SDK (`std::char_traits<fmt::internal::char8_type>`
# is no longer specialised post-C++20), so building it for parity would
# require either bumping the version (parity break) or pinning the dep
# alone to C++17 (extra complexity). The dead dep is dropped here and
# from `src/BUILD.bazel`; if anything ever does want fmt, it can come
# back as a fresh pin against a C++23-clean version.

http_archive(
    name = "jansson",
    build_file = "//bazel:jansson.BUILD.bazel",
    sha256 = "f4f377da17b10201a60c1108613e78ee15df6b12016b116b6de42209f47a474f",
    strip_prefix = "jansson-2.13.1",
    url = "https://www.digip.org/jansson/releases/jansson-2.13.1.tar.gz",
)

http_archive(
    name = "jbigkit",
    build_file = "//bazel:jbigkit.BUILD.bazel",
    sha256 = "de7106b6bfaf495d6865c7dd7ac6ca1381bd12e0d81405ea81e7f2167263d932",
    strip_prefix = "jbigkit-2.1",
    url = "https://www.cl.cam.ac.uk/~mgk25/jbigkit/download/jbigkit-2.1.tar.gz",
)

http_archive(
    name = "lcms2",
    build_file = "//bazel:lcms2.BUILD.bazel",
    sha256 = "d873d34ad8b9b4cea010631f1a6228d2087475e4dc5e763eb81acc23d9d45a51",
    strip_prefix = "lcms2-2.16",
    url = "https://github.com/mm2/Little-CMS/releases/download/lcms2.16/lcms2-2.16.tar.gz",
)

http_archive(
    name = "sentry",
    build_file = "//bazel:sentry.BUILD.bazel",
    sha256 = "657391465eb6236d6e3f3eec1d25434178783328f1f0a744c99c9b049c6225e1",
    strip_prefix = "sentry-native-0.9.0",
    url = "https://github.com/getsentry/sentry-native/archive/refs/tags/0.9.0.tar.gz",
)

http_archive(
    name = "sole",
    build_file = "//bazel:sole.BUILD.bazel",
    sha256 = "70dbd71f2601963684195f4c7d8a1c2d45a0d53114bc4d06f8cebe6d3d3ffa69",
    strip_prefix = "sole-95612e5cda1accc0369a51edfe0f32bfb4bee2a0",
    # r-lyeh's single-header UUID lib (used by shttps/lua/LuaServer.cpp). Not on BCR.
    # SOLE_VERSION 1.0.5 is the latest but untagged upstream, so pin the commit;
    # 1.0.5 carries the threaded-init (#18/#39) and socket-leak (#38) fixes the
    # previously-vendored 1.0.0 lacked.
    url = "https://github.com/r-lyeh-archived/sole/archive/95612e5cda1accc0369a51edfe0f32bfb4bee2a0.tar.gz",
)

http_archive(
    name = "tiff",
    build_file = "//bazel:tiff.BUILD.bazel",
    sha256 = "a3faec056a490c62b8749847317521204f8c4d9933cce834e691a74524ec38fe",
    strip_prefix = "libtiff-4.7.1",
    # libsdl-org mirror = the exact tarball the BCR libtiff/4.7.1 overlay (which
    # bazel/tiff.BUILD.bazel is vendored from) was validated against; layout
    # matches the overlay's source-file paths.
    url = "https://github.com/libsdl-org/libtiff/archive/refs/tags/v4.7.1.tar.gz",
)

# Tracy — opt-in, dev-only frame/zone profiler (https://github.com/wolfpld/tracy).
# Not a BCR module (verified: registry has no `tracy`), so it follows the native
# `cc_library` pattern per ADR-0015. The dep is *always* in the graph but inert:
# the profiler machinery in `public/client/*.cpp` is gated behind `TRACY_ENABLE`,
# which only `--config=tracy` defines, so a normal build links no listening
# socket and collects nothing. See `bazel/tracy.BUILD.bazel` and
# `docs/adr/0016-tracy-opt-in-dev-profiler.md`.
http_archive(
    name = "tracy",
    build_file = "//bazel:tracy.BUILD.bazel",
    sha256 = "d4efc50ebcb0bfcfdbba148995aeb75044c0d80f5d91223aebfaa8fa9e563d2b",
    strip_prefix = "tracy-0.13.1",
    url = "https://github.com/wolfpld/tracy/archive/refs/tags/v0.13.1.tar.gz",
)

