# Files exposed to Bazel-loaded extensions (kakadu_extension consumes
# `kakadu.BUILD.bazel` as the `build_file` argument to `gh_release_archive`).
exports_files(["kakadu.BUILD.bazel"])

# Per-tool binutils from the prebuilt LLVM bundle, version-matched to the
# toolchain (LLVM 22), selected by the *exec* platform: the debug-split genrule (`//src:sipi_debug_
# split`, Linux-only) needs llvm-objcopy/llvm-readelf, and `just bazel-coverage`
# needs llvm-cov/llvm-profdata version-matched to the instrumented `.profraw`
# (a host LLVM 19 profdata cannot read an LLVM 22 profile). The Linux branches
# cover CI's two arches; the darwin default keeps `bazel build //...` resolving
# on macOS (where the genrule is incompatible-skipped and coverage uses the
# darwin bundle). Bumping LLVM_VERSION means updating the bundle names here and
# in MODULE.bazel (ADR-0014 policy).
alias(
    name = "llvm-objcopy",
    actual = select({
        "//platforms:is_linux_x86_64": "@llvm-toolchain-minimal-22.1.7-linux-amd64//:bin/llvm-objcopy",
        "//platforms:is_linux_aarch64": "@llvm-toolchain-minimal-22.1.7-linux-arm64//:bin/llvm-objcopy",
        "//conditions:default": "@llvm-toolchain-minimal-22.1.7-darwin-arm64//:bin/llvm-objcopy",
    }),
    visibility = ["//visibility:public"],
)

alias(
    name = "llvm-readelf",
    actual = select({
        "//platforms:is_linux_x86_64": "@llvm-toolchain-minimal-22.1.7-linux-amd64//:bin/llvm-readelf",
        "//platforms:is_linux_aarch64": "@llvm-toolchain-minimal-22.1.7-linux-arm64//:bin/llvm-readelf",
        "//conditions:default": "@llvm-toolchain-minimal-22.1.7-darwin-arm64//:bin/llvm-readelf",
    }),
    visibility = ["//visibility:public"],
)

alias(
    name = "llvm-cov",
    actual = select({
        "//platforms:is_linux_x86_64": "@llvm-toolchain-minimal-22.1.7-linux-amd64//:bin/llvm-cov",
        "//platforms:is_linux_aarch64": "@llvm-toolchain-minimal-22.1.7-linux-arm64//:bin/llvm-cov",
        "//conditions:default": "@llvm-toolchain-minimal-22.1.7-darwin-arm64//:bin/llvm-cov",
    }),
    visibility = ["//visibility:public"],
)

alias(
    name = "llvm-profdata",
    actual = select({
        "//platforms:is_linux_x86_64": "@llvm-toolchain-minimal-22.1.7-linux-amd64//:bin/llvm-profdata",
        "//platforms:is_linux_aarch64": "@llvm-toolchain-minimal-22.1.7-linux-arm64//:bin/llvm-profdata",
        "//conditions:default": "@llvm-toolchain-minimal-22.1.7-darwin-arm64//:bin/llvm-profdata",
    }),
    visibility = ["//visibility:public"],
)

# Consumed by the sanitizer CI jobs and local sanitizer runs to symbolize
# ASan/LSan reports (`sipi+0xOFFSET` frames) — required for the name-based
# suppressions in `.lsan_suppressions.txt` to match symbolized frames.
alias(
    name = "llvm-symbolizer",
    actual = select({
        "//platforms:is_linux_x86_64": "@llvm-toolchain-minimal-22.1.7-linux-amd64//:bin/llvm-symbolizer",
        "//platforms:is_linux_aarch64": "@llvm-toolchain-minimal-22.1.7-linux-arm64//:bin/llvm-symbolizer",
        "//conditions:default": "@llvm-toolchain-minimal-22.1.7-darwin-arm64//:bin/llvm-symbolizer",
    }),
    visibility = ["//visibility:public"],
)

# glibc 2.42 → 2.31 ABI compatibility shims. See glibc23_compat.c for
# the full rationale. Linked into //src/cli:sipi on Linux only (see
# `linkopts` selector there).
load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "glibc23_compat",
    srcs = ["glibc23_compat.c"],
    visibility = ["//visibility:public"],
    target_compatible_with = ["@platforms//os:linux"],
    # `_GNU_SOURCE` is also #defined inside the .c file, but spelling it
    # out here ensures the macro is visible to any tooling that
    # introspects the cc_library's `defines`.
    defines = ["_GNU_SOURCE"],
)
